# irrigation-prediction-system

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  pyproject.toml  run_pipeline.py
.dvc/: config
.github/workflows/: ci.yml
artifacts/data/exp/: tree_v1.parquet.dvc
artifacts/data/experiments/: tree_data_v1.parquet.dvc
artifacts/data/raw/: raw_v1.csv.dvc
artifacts/objects/: enc_v1.joblib.dvc  pipe_v1.joblib.dvc
data/raw/: raw_data.csv.dvc
data/unseen/: unseen_v1.csv.dvc
src/: __init__.py
src/configs/: __init__.py  data_cfg.py  settings.py
src/experiments/eda/: processed_linear_data.ipynb  processed_tree_data.ipynb  raw_data.ipynb
src/experiments/preprocess/: linear_model_data.ipynb  tree_model_data.ipynb
src/experiments/train/: linear_models.ipynb  tree_models.ipynb
src/pipeline/: __init__.py  inference.py  ingestion.py  monitoring.py  preprocess.py  validation.py
src/utils/: __init__.py  artifact_loader.py  artifact_utils.py
transformers/: preprocessing_v1.joblib.dvc  target_encoder_v1.joblib.dvc
